// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Code component aligned 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  text-align: right;
  font-family: Consolas,"Liberation Mono",Menlo,monospace;
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
>
  Hello
</code>
`;

exports[`A Code component resized 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 2.875rem;
  font-family: Consolas,"Liberation Mono",Menlo,monospace;
  line-height: 4rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="xxxxlarge"
>
  Hello
</code>
`;

exports[`A Code component weight 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 700;
  font-family: Consolas,"Liberation Mono",Menlo,monospace;
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
  fontWeight="bold"
>
  Hello
</code>
`;

exports[`A default Code component 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-family: Consolas,"Liberation Mono",Menlo,monospace;
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
>
  Hello
</code>
`;
